force-app/main/default/objects/LookupBuddy__mdt/LookupBuddy__mdt.object-meta.xml
<CustomObject>
    <label>LookupBuddy</label>
    <pluralLabel>LookupBuddies</pluralLabel>
</CustomObject>