force-app/main/default/objects/LookupBuddy__mdt/fields/Lookup_A_Field__c.field-meta.xml
<CustomField>
    <fullName>Lookup_A_Field__c</fullName>
    <label>Lookup A Field</label>
    <metadataRelationshipControllingField>LookupBuddy__mdt.Primary_Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>LookupBuddies</relationshipLabel>
    <relationshipName>LookupBuddies</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>