force-app/main/default/objects/LookupBuddy__mdt/fields/Lookup_A_Object__c.field-meta.xml
<CustomField>
    <fullName>Lookup_A_Object__c</fullName>
    <label>Lookup A Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>LookupBuddies1</relationshipLabel>
    <relationshipName>LookupBuddies1</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>