force-app/main/default/objects/LookupBuddy__mdt/fields/Lookup_A_to_B_Field__c.field-meta.xml
<CustomField>
    <fullName>Lookup_A_to_B_Field__c</fullName>
    <label>Lookup A to B Field</label>
    <metadataRelationshipControllingField>LookupBuddy__mdt.Lookup_A_Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>LookupBuddies2</relationshipLabel>
    <relationshipName>LookupBuddies2</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>