force-app/main/default/objects/LookupBuddy__mdt/fields/Lookup_B_Field__c.field-meta.xml
<CustomField>
    <fullName>Lookup_B_Field__c</fullName>
    <label>Lookup B Field</label>
    <metadataRelationshipControllingField>LookupBuddy__mdt.Primary_Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>LookupBuddies1</relationshipLabel>
    <relationshipName>LookupBuddies1</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>