force-app/main/default/objects/LookupBuddy__mdt/fields/Primary_Object__c.field-meta.xml
<CustomField>
    <fullName>Primary_Object__c</fullName>
    <label>Primary Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>LookupBuddies</relationshipLabel>
    <relationshipName>LookupBuddies</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>